--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,15 +6,15 @@
     <link rel="icon" href="static/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Nerglish Translator" />
     <link rel="manifest" href="static/manifest.json" />
     <title>Nerglish Translator</title>
-    <script defer="defer" src="/./static/js/runtime.aa78e36a.js"></script>
-    <script defer="defer" src="/./static/js/576.aa78e36a.js"></script>
-    <script defer="defer" src="/./static/js/index.aa78e36a.js"></script>
+    <script defer="defer" src="/./static/js/runtime.2b5ee81d.js"></script>
+    <script defer="defer" src="/./static/js/576.2b5ee81d.js"></script>
+    <script defer="defer" src="/./static/js/index.2b5ee81d.js"></script>
 </head>
 
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
+<body>
     <div id="root"></div>
 </body>
 
